fix: alignment in sidemune

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,14 +35,14 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.3); /* dark gray */
+  background-color: rgba(0, 0, 0, 0.1); /* dark gray */
   border-radius: 8px;
   border: 2px solid transparent;
   background-clip: content-box;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 * {
